deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yuki-bot
  namespace: yuki-bot
  labels:
    app: yuki-bot
    version: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yuki-bot
  template:
    metadata:
      labels:
        app: yuki-bot
        version: "3"
    spec:
      containers:
        - name: yuki-bot
          image: jesliao/yuki-bot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: yuki-bot
  namespace: yuki-bot
spec:
  selector:
    app: yuki-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: yuki-bot
  namespace: yuki-bot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - app.yukichiko.com
      secretName: yukichiko-tls
  rules:
    - host: app.yukichiko.com
      http:
        paths:
          - backend:
              serviceName: yuki-bot
              servicePort: 80
